# tauri-openhands

./: .gitignore  package.json  tauri-app-release-final.apk.idsig
desktop-tauri/: index.html  package.json
desktop-tauri/src/: main.ts  styles.css
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/src/: app.rs  lib.rs  main.rs
desktop-tauri/src-tauri/src/canvas/: camera.rs  infinite_canvas.rs  mod.rs
desktop-tauri/src-tauri/src/tiles/: egui_tile.rs  mod.rs  skia_tile.rs  tile.rs  webview_tile.rs
desktop-tauri/src-tauri/src/webview/: mod.rs  webview_manager.rs
keystore/: new-keystore.keystore  tauri-app-key.keystore
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
temp_apk/: AndroidManifest.xml  classes.dex  resources.arsc
temp_apk/assets/: tauri.conf.json
temp_apk/assets/dexopt/: baseline.prof  baseline.profm
temp_apk/res/: -1.xml  -5.xml  -7.xml  1R.xml  21.xml  2F.xml  2f.xml  2j.xml  2n.xml  3A.xml  3h.xml  46.xml  4H.xml  4I.xml  4S.xml  4_.xml  4o.xml  59.xml  5l.xml  61.xml  66.xml  68.xml  6x.xml  7G.xml  7s.xml  9O.xml  9V.xml  9z.xml  A0.xml  A1.xml  AB.xml  B6.xml  BJ1.xml  BT.xml  Be.xml  By.xml  By1.xml  D5.xml  DG.xml  DV.xml  (+138 more)
temp_apk/res/color/: m3_appbar_overlay_color.xml  m3_card_foreground_color.xml  m3_checkbox_button_icon_tint.xml  m3_checkbox_button_tint.xml  m3_navigation_item_ripple_color.xml  m3_radiobutton_ripple_tint.xml  m3_selection_control_ripple_color_selector.xml  m3_slider_thumb_color.xml  m3_switch_track_tint.xml  m3_tabs_icon_color.xml  (+10 more)
