[package]
name = "tauri-appdesktop-tauri-app"
version = "0.1.0"
description = "A Tauri App with Infinite Canvas"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appdesktop_tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["webview", "window"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
egui = "0.26.2"
eframe = "0.26.2"
egui-wgpu = "0.26.2"
egui-winit = "0.26.2"
wgpu = "0.19.1"
winit = "0.29.10"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
glam = "0.25.0"
raw-window-handle = "0.6.0"
log = "0.4.20"
env_logger = "0.11.2"
anyhow = "1.0.79"
thiserror = "1.0.56"
futures = "0.3.30"
async-std = "1.12.0"
tiny-skia = "0.11.2"
rfd = "0.12.1"

